[package]
name = "howlong"
description = "CLI duration calculator."
repository = "https://github.com/alilleybrinker/howlong"
license = "MIT"
version = "0.1.0"
rust-version = "1.56"
edition = "2021"
keywords = ["time", "cli"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
anyhow = "1.0.0"

